# reducing-token-using-chinese-system-prompt-and-using-nlp-to-translate-to-english-

./: .gitignore  CHANGELOG.md  README.md  example.py  pyproject.toml  requirements.txt
chinese_prompt_optimizer/: __init__.py  __main__.py  anti_hallucination.py  gui.py  logging_config.py  optimizer.py  providers.py  sot.py  translator.py  utils.py
docs/: architecture.md  research_notes.txt
tests/: test_anti_hallucination.py  test_gui.py  test_integration_gemini.py  test_optimizer.py  test_providers.py  test_sot.py  test_translator.py  test_utils.py
