[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chinese-prompt-optimizer"
version = "1.0.0"
description = "Reduce LLM token costs via Chinese system prompts with anti-hallucination NLP translation"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = [
    "llm", "chinese", "token-optimization", "nlp", "translation",
    "litellm", "anti-hallucination", "prompt-engineering",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "litellm>=1.63.0",
    "deep-translator>=1.11.4",
    "tiktoken>=0.9.0",
    "matplotlib>=3.10.1",
]

[project.optional-dependencies]
gui = ["matplotlib>=3.10.1"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[project.scripts]
chinese-prompt-optimizer = "chinese_prompt_optimizer.__main__:main"

[project.urls]
Homepage = "https://github.com/Vikaash-dev/reducing-token-using-chinese-system-prompt-and-using-nlp-to-translate-to-english-"
Repository = "https://github.com/Vikaash-dev/reducing-token-using-chinese-system-prompt-and-using-nlp-to-translate-to-english-"
"Bug Tracker" = "https://github.com/Vikaash-dev/reducing-token-using-chinese-system-prompt-and-using-nlp-to-translate-to-english-/issues"

[tool.setuptools.packages.find]
include = ["chinese_prompt_optimizer*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 99
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]
